--- a/estilos/estilo.css
+++ b/estilos/estilo.css
@@ -413,7 +413,6 @@ button {
     transition: all 0.2s;
     margin-left: 80px;
    }
-   
    button span {
     display: block;
     margin-left: 0.3em;
@@ -539,54 +538,132 @@ footer .copy{
 }
 /*  media es para cambiar los tamaños de las pantallas cuando usamos celular, tablet, note, etc */
 
-@media (min-width: 300px) and (max-width: 500px){
-    .cabecera__titulo{
+@media (min-width: 390px){
+    body{
+        margin: 0;
+        width: 100%;
+    }
+    .cabecera__nav{
+        width: 100%;
+        height: 10vh;
+        margin: 0%;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
         letter-spacing: 5px;
+        background-color: #181414;
+    }
+    .cabecera__titulo{
+        letter-spacing: 10px;
         color: white;
-        font-size: 15px;
+        font-size: 30px;
         font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
         transition: 0.1s;
         font-weight: inherit;
         font-style: oblique;
-        left: 30px;
-        position: relative;
     }
-    
-    .paginaPrincipal{
-    width: 100%;
-    height: 200px;
-    margin-right: 0%;
-    background-image: url("../imagen/imagen-tc-scaled-e1610632729734.jpg");
-    background-position: center;
-    background-size: 100vh;
-    background-repeat: no-repeat;
+    .cabecera__nav a {
+        text-decoration: none;
+        color: white;
     }
-    .contenedor{
-        
+    .cabecera__titulo{
+        /* espacio entre las letras del arquic transicion
+              tipo de letra */
+        letter-spacing: 10px;
+        color: white;
+        font-size: 20px;
+        font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+        transition: 0.1s;
+        font-weight: inherit;
+        font-style: oblique;
+        padding-left: 20px;
+    }
+    .cabecera__titulo:hover {
+        /* color del arquic cuando se pasa por arriba */
+        color: rgb(7, 6, 6);
+        background-color: rgba(248, 248, 236, 0.911);
+        display: block;
+        padding: 0.3rem 0.7rem;
+        border-radius: 5px;
+        cursor: pointer;
+    }
+    .cabecera__nav ul {
+        /* tamaño de la barra de arriba */
+        margin: 0;
         padding: 0;
+    }
+    .cabecera__nav ul li {
+        /* posicion del la barra */
+        
+    }
+    .cabecera__nav ul li a {
+        /* configuraciones del Inicio, servicio, obras, etc */
+        
+        padding: 0.3rem 0.7rem;
+        transition: all 0.1s linear;
+        border-radius: 9px;
+        font-size: 17px;
+    }
+    .cabecera__nav ul li a:hover {
+        /* color de fondo del inicio,servicio,etc */
+        background-color: rgb(255, 255, 255);
+        color: #181414;
+    }
+    .iconos {
+        /* insta hace referencia a los iconos */
+        color: white;
+        transition: all 0.1s linear;
+        border-radius: 9px;
+        padding: 0.3rem 0.7rem;
+    }
+    .paginaPrincipal{
+        /* imagen del hero y dimensiones */
+        width: 100%;
+        height: 515px;
+        margin-right: 0%;
+        background-image: url("../imagen/imagen-tc-scaled-e1610632729734.jpg");
+        background-position: center;
+        background-size: 110vh;
+        background-repeat: no-repeat;
+        
+    }
+    .fondo__transparente {
+        /* Estilo de fondo transparente */
+        
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 515px;
+        background-color: rgba(15, 15, 15, 0.74);
+        
+        color: white;
+    }
+    .contenedor {
+        /* en que posicion ponemos las frases respecto de la imagen */
+        padding-top: 10px;
     }
     .contenedor h3 {
         /* se controla la letra, el margen y el tamaño de la letra */
-        font-style: italic;
-        font-size: 10px;
-        margin: 0%;
-        position: relative;
-        left: 60px;
-        top: 14px;
+        padding-left: 30px;
+        font-size: 20px;
+        
     }
     .contenedor h1 {
         /* controlamos la fuente, tamaño y margen */
         font-weight: bold;
-        font-size: 15px;
-        margin-top:0;
-        left: 60px;
-        position: relative;
-        top: 20px;
+        font-size: 50px;
+        padding-left: 100px;
+        padding-top: 5px;
         
+    }
+    .boton_he{
+        padding-top: 10px;
+        padding-left: 120px;
+        display: flex;
     }
     .boton__hero {
         text-decoration: none;
-        font-size: 10px;
+        font-size: 15px;
         padding: 10px 15px;
         border-radius: 10px;
         background-color: rgb(32, 28, 19);
@@ -594,13 +671,332 @@ footer .copy{
         text-transform: uppercase;
         font-weight: bold;
         transition: all 0.2s ease-in-out;
-        left: 60px;
-        top: 30px;
-        position: relative;
+        
+        
     
     }
     .boton__hero:hover {
         color: rgb(8, 8, 8);
         background-color: #ffebcd;
     }
+    /*ACA EMPIEZA LA SECCION DE SERVICIOS*/
+.servicios{
+    width: 100%;
+    height: 950px;
+    background-image: url("../imagen/775909044908312087-La-experiencia-sensorial-en-la-arquitectura-60fe72f17804c.jpeg");
+    background-repeat: no-repeat;
+    background-size: 250vh;
+    color: black;
+    
+    margin: 0;
+}
+.fond__transparente {
+    background-color: rgba(46, 43, 43, 0.842);
+    height: 950px;
+}
+
+.servicios h3 {
+    padding-top: 20px;
+    margin-top: 0%;
+    color: rgb(255, 255, 255);
+    font-size: 15px;
+    text-align: center;
+    font-family: Verdana, Geneva, Tahoma, sans-serif; 
+    letter-spacing: 3px;
+}
+.decoracion{
+    padding-top: 0px;
+    margin: 0;
+    font-size: 13px;
+    padding-left: 50px;
+    color: rgb(255, 255, 255);
+}
+.servicios p{
+    font-size: 20px;
+    color: rgb(255, 255, 255);
+    text-align: center;
+}
+.contenedor__cards {
+    display: flex;
+    margin: 25px;
+    text-align: center;
+}
+
+.cardCocina{
+    width: 35%;
+    height: 140px;
+    background-color: rgba(255, 255, 255, 0.61);
+    border-radius: 10px;
+    color: rgba(255, 255, 255, 0);
+    transition: all 0.1s;
+    
+}
+.cardCocina:hover {
+    color: rgb(252, 249, 249);
+    background-color: rgba(255, 255, 255, 0.884);
+    cursor: pointer;
+    transform: scale(1.1);
+    transition-duration: 1.4s;
+}
+.cardCocina img{
+    width: 100px;
+    height: 115px;
+    margin-top: 10px;
+    border-radius: 20px;
+    
+}
+.cardCocina h4{
+    font-size: 10px;
+}
+.cardBaños{
+    width: 35%;
+    height: 140px;
+    background-color: rgba(255, 255, 255, 0.61);
+    border-radius: 10px;
+    color: rgba(255, 255, 255, 0);
+    transition: all 0.1s;
+    
+}
+.cardBaños:hover {
+    color: rgb(252, 249, 249);
+    background-color: rgba(255, 255, 255, 0.884);
+    cursor: pointer;
+    transform: scale(1.1);
+    transition-duration: 1.4s;
+}
+.cardBaños img{
+    width: 100px;
+    height: 115px;
+    margin-top: 10px;
+    border-radius: 20px;
+    
+}
+.cardBaños h4{
+    font-size: 10px;
+}
+.cardSalon{
+    width: 35%;
+    height: 140px;
+    background-color: rgba(255, 255, 255, 0.61);
+    border-radius: 10px;
+    color: rgba(255, 255, 255, 0);
+    transition: all 0.1s;
+    
+}
+.cardSalon:hover {
+    color: rgb(252, 249, 249);
+    background-color: rgba(255, 255, 255, 0.884);
+    cursor: pointer;
+    transform: scale(1.1);
+    transition-duration: 1.4s;
+}
+.cardSalon img{
+    width: 100px;
+    height: 115px;
+    margin-top: 10px;
+    border-radius: 20px;
+    
+}
+.cardSalon h4{
+    font-size: 10px;
+}
+.cardDeco{
+    width: 35%;
+    height: 140px;
+    background-color: rgba(255, 255, 255, 0.61);
+    border-radius: 10px;
+    color: rgba(255, 255, 255, 0);
+    transition: all 0.1s;
+    
+}
+.cardDeco:hover {
+    color: rgb(252, 249, 249);
+    background-color: rgba(255, 255, 255, 0.884);
+    cursor: pointer;
+    transform: scale(1.1);
+    transition-duration: 1.4s;
+}
+.cardDeco img{
+    width: 100px;
+    height: 115px;
+    margin-top: 10px;
+    border-radius: 20px;
+    
+}
+.cardDeco h4{
+    font-size: 10px;
+    
+}
+.obras{
+    width: 100%;
+    height: 1450px;
+    background-image: url("../imagen/ALFRED_ESSA\ \(1\).webp");
+    background-repeat: repeat;
+    background-size: 150vh;
+    color: black;
+    margin: 0;
+}
+.fon__transparente {
+    background-color: rgba(46, 43, 43, 0.842);
+    height: 1450px;
+}
+.obras h3{
+    font-size: 20px;
+    margin: 0;
+    padding-left: 50px;
+    padding-top: 30px;
+    color: rgb(255, 255, 255);
+}
+.obras h5{
+    color: rgb(255, 255, 255);
+    padding-left: 70px;
+    padding-top: 5px;
+    margin: 0;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    padding-bottom: 20px;
+}
+.contenedo__cards{
+    margin-top: 0;
+}
+
+.contenedo__cards img{
+    padding-left: 50px;
+    width: 250px;
+    height: 140px;
+    border-radius: 20px;
+    padding-top: 10px;
+    
+}
+
+.card h4{
+    font-size: 17px;
+    color: #947f45;
+    padding-left: 50px;
+    padding-top: 0px;
+    margin: 0;
+    
+}
+.card h5{
+    font-size: 14px;
+    padding-top: 5px;
+    margin: 0;
+    padding-left: 50px;
+    
+}
+.card p{
+    padding-top: 0px;
+    font-size: 17px;
+    padding-left: 20px;
+    color: #ffebcd;
+    
+}
+/*ACA EMPIEZA LA SECCION DE CONTACTOS*/
+.contacto{
+    display: grid;
+    height: 600px;
+}
+.contenedor__contact h3{
+    text-align: center;
+    font-size: 25px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+}
+.contenedor__contact iframe{
+    width: 340px;
+    height: 200px;
+    padding-left: 20px;
+    margin-bottom: 30px;
+    border-radius: 20px;
+}
+.barra{
+    margin-top: 0px;
+    
+}
+.form__labe{
+    font-size: 20px;
+    padding-left: 30px;
+    padding-top: 0px;
+    margin: 0;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.form__label{
+    font-size: 20px;
+    padding-left: 30px;
+    padding-top: 0px;
+    margin: 0;
+    
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.form__input{
+    padding-left: 30px;
+    margin-top: 0px;
+    margin-bottom: 20px;
+    margin-left: 5px;
+    
+}
+.form__inpu{
+    padding-left: 0px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    margin-left: 5px;
+}
+.btn__submit{
+    padding-top: 20px;
+    font-size: 20px;
+    margin-left: 20px;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.form__textarea{
+    padding-left: 25px;
+    bottom: 40px;
+    margin-top: 0px;
+}
+/*ACA EMPIEZA LA SECCION DE PASO A PASO*/
+.paso{
+    background-image: url(../imagen/85994.webp);
+    height: 1600px;
+    display: grid;
+    width: 100%;
+}
+.fo__transparente{
+    background-color: #0a0a0a85;
+    width: 100%;
+    height: 1600px;
+}
+.fo__transparente h3{
+    color: rgb(255, 255, 255);
+    text-align: center;
+    letter-spacing: 5px;
+    font-size: 20px;
+
+}
+.cards{
+    display: grid;
+}
+.cards {
+    
+    margin: 25px;
+    text-align: center;
+}
+.cards img{
+    
+    border-radius: 10px;
+    cursor: pointer;
+    transition: all 1s;
+}
+
+.cards img:hover{
+    transform: scale(1.1);
+    transition-duration: 1.5s;
+}
+
+.cards h4{
+    color: rgb(255, 255, 255);
+    
+    font-size: 20px;
+
+}
+.cards h5{
+    color: rgb(255, 255, 255);
+    font-size: 15px;
+}
 }
