--- a/estilos/estilo.css
+++ b/estilos/estilo.css
@@ -344,67 +344,70 @@ header {
     padding-top: 0px;
     font-size: 23px;
     padding-left: 50px;
-    color: #ffebcd;
+    color: #050505;
     
 }
 /*ACA EMPIEZA LA SECCION DE CONTACTOS*/
 .contacto{
     display: flex;
+    height: 500px;
 }
 .contenedor__contact h3{
     text-align: center;
     font-size: 25px;
     font-family: Georgia, 'Times New Roman', Times, serif;
+    display: grid;
+    grid-template-columns: 500px auto;
+    grid-template-rows: 60px auto;
+    margin: 0;
+    
 }
 .contenedor__contact iframe{
-    width: 400px;
-    height: 300px;
-    padding-left: 50px;
-    margin-bottom: 30px;
+    width: 600px;
+    height: 340px;
+    padding-left: 30px;
+    
     border-radius: 20px;
 }
 .barra{
     margin-top: 100px;
+    text-align: center;
+    display: grid;
 }
 .form__labe{
     font-size: 20px;
-    padding-left: 30px;
-    padding-top: 70px;
-    margin: 0;
+    
     
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 .form__label{
     font-size: 20px;
-    padding-left: 30px;
-    padding-top: 70px;
-    margin: 0;
     
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 .form__input{
-    padding-left: 30px;
-    margin-top: 50px;
-    margin-bottom: 40px;
-    margin-left: 5px;
-    
+    font-size: 20px;
+    margin-left: 20px;
+    margin-left: 300px;
+    margin-right: 10px;
 }
 .form__inpu{
     padding-left: 0px;
-    margin-top: 50px;
-    margin-bottom: 40px;
-    margin-left: 5px;
+    padding-bottom: 0px;
+    margin-left: 300px;
+    margin-right: 10px;
 }
 .btn__submit{
-    padding-top: 90px;
+    
     font-size: 20px;
-    margin-left: 20px;
+    
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 .form__textarea{
-    padding-left: 25px;
+    margin-left: 300px;
+    margin-right: 10px;
     bottom: 40px;
-    margin-top: 30px;
+    
 }
 
 button{
@@ -420,7 +423,10 @@ button{
     border-radius: 16px;
     overflow: hidden;
     transition: all 0.2s;
-    margin-left: 80px;
+    margin-left: 300px;
+    margin-right: 280px;
+    margin-top: 30px;
+    margin-bottom: 20px;
    }
    button span {
     display: block;
@@ -483,26 +489,6 @@ button{
     padding-top: 30px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
-.card-img-top{
-    width: 100%;
-    height: 300px;
-}
-.card-body h5{
-    font-size: 25px;
-}
-.card-body p{
-    color: #181414;
-    font-size: 20px;
-}
-.card{
-    cursor: pointer;
-    transition: all 1s;
-}
-.card:hover{
-    transform: scale(1.05);
-    transition-duration: 1.5s;
-}
-/*
 .icon {
     display: grid;
     grid-template-columns: 500px 500px 500px;
@@ -531,7 +517,7 @@ button{
     font-size: 15px;
     text-align: center;
 }
-*/
+
 /* Esto hace referencia al footer, donde estan algunas redes sociales de la marca, si se aprieta redes en la barra de nav, lo redicciona hasta aca, cada icono del footer tiene su direccion */
 
 footer{
@@ -882,7 +868,7 @@ footer .copy{
 }
 
 /*
-.contenedo__cards{
+.contenedo__cards{npm
     margin-top: 0;
 }
 
