--- a/estilos/estilo.css
+++ b/estilos/estilo.css
@@ -557,75 +557,7 @@ footer .copy{
         margin: 0;
         width: 100%;
     }
-    .cabecera__nav{
-        width: 100%;
-        height: 10vh;
-        margin: 0%;
-        display: flex;
-        justify-content: space-around;
-        align-items: center;
-        letter-spacing: 5px;
-        background-color: #181414;
-    }
-    .cabecera__titulo{
-        letter-spacing: 10px;
-        color: white;
-        font-size: 30px;
-        font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
-        transition: 0.1s;
-        font-weight: inherit;
-        font-style: oblique;
-    }
-    .cabecera__nav a {
-        text-decoration: none;
-        color: white;
-    }
-    .cabecera__titulo{
-        /* espacio entre las letras del arquic transicion
-              tipo de letra */
-        letter-spacing: 10px;
-        color: white;
-        font-size: 20px;
-        font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
-        transition: 0.1s;
-        font-weight: inherit;
-        font-style: oblique;
-        padding-left: 20px;
-    }
-    .cabecera__titulo:hover {
-        /* color del arquic cuando se pasa por arriba */
-        color: rgb(7, 6, 6);
-        background-color: rgba(248, 248, 236, 0.911);
-        display: block;
-        padding: 0.3rem 0.7rem;
-        border-radius: 5px;
-        cursor: pointer;
-    }
-    .cabecera__nav ul {
-        /* tamaño de la barra de arriba */
-        margin: 0;
-        padding: 0;
-    }
-    .cabecera__nav ul li a {
-        /* configuraciones del Inicio, servicio, obras, etc */
-        
-        padding: 0.3rem 0.7rem;
-        transition: all 0.1s linear;
-        border-radius: 9px;
-        font-size: 17px;
-    }
-    .cabecera__nav ul li a:hover {
-        /* color de fondo del inicio,servicio,etc */
-        background-color: rgb(255, 255, 255);
-        color: #181414;
-    }
-    .iconos {
-        /* insta hace referencia a los iconos */
-        color: white;
-        transition: all 0.1s linear;
-        border-radius: 9px;
-        padding: 0.3rem 0.7rem;
-    }
+   
     .paginaPrincipal{
         /* imagen del hero y dimensiones */
         width: 100%;
@@ -654,21 +586,23 @@ footer .copy{
     }
     .contenedor h3 {
         /* se controla la letra, el margen y el tamaño de la letra */
-        padding-left: 30px;
+        text-align: center;
         font-size: 20px;
+        margin-left: 10px;
+        margin-right: 10px;
         
     }
     .contenedor h1 {
         /* controlamos la fuente, tamaño y margen */
         font-weight: bold;
         font-size: 50px;
-        padding-left: 100px;
+        text-align: center;
         padding-top: 5px;
         
     }
     .boton_he{
         padding-top: 10px;
-        padding-left: 120px;
+        justify-content: center;
         display: flex;
     }
     .boton__hero {
@@ -690,251 +624,253 @@ footer .copy{
         background-color: #ffebcd;
     }
     /*ACA EMPIEZA LA SECCION DE SERVICIOS*/
-.servicios{
-    width: 100%;
-    height: 950px;
-    background-image: url("../imagen/775909044908312087-La-experiencia-sensorial-en-la-arquitectura-60fe72f17804c.jpeg");
-    background-repeat: no-repeat;
-    background-size: 250vh;
-    color: black;
+    .servicios{
+        width: 100%;
+        height: 1550px;
+        background-image: url("../imagen/775909044908312087-La-experiencia-sensorial-en-la-arquitectura-60fe72f17804c.jpeg");
+        background-repeat: no-repeat;
+        background-size: 250vh;
+        color: black;
+        
+        margin: 0;
+    }
+    .fond__transparente {
+        background-color: rgba(46, 43, 43, 0.842);
+        height: 1550px;
+    }
     
-    margin: 0;
-}
-.fond__transparente {
-    background-color: rgba(46, 43, 43, 0.842);
-    height: 950px;
-}
-
-.servicios h3 {
-    padding-top: 20px;
-    margin-top: 0%;
-    color: rgb(255, 255, 255);
-    font-size: 15px;
-    text-align: center;
-    font-family: Verdana, Geneva, Tahoma, sans-serif; 
-    letter-spacing: 3px;
-}
-.decoracion{
-    padding-top: 0px;
-    margin: 0;
-    font-size: 13px;
-    padding-left: 50px;
-    color: rgb(255, 255, 255);
-}
-.servicios p{
-    font-size: 20px;
-    color: rgb(255, 255, 255);
-    text-align: center;
-}
-.contenedor__cards {
-    display: flex;
-    margin: 25px;
-    text-align: center;
-}
-
-.cardCocina{
-    width: 35%;
-    height: 140px;
-    background-color: rgba(255, 255, 255, 0.61);
-    border-radius: 10px;
-    color: rgba(255, 255, 255, 0);
-    transition: all 0.1s;
+    .servicios h3 {
+        padding-top: 20px;
+        margin-top: 0%;
+        color: rgb(255, 255, 255);
+        font-size: 30px;
+        text-align: center;
+        font-family: Verdana, Geneva, Tahoma, sans-serif; 
+        letter-spacing: 3px;
+    }
+    .decoracion{
+        padding-top: 0px;
+        padding-left: 0;
+        margin: 0;
+        font-size: 20px;
+        text-align: center;
+        color: rgb(255, 255, 255);
+    }
+    .servicios p{
+        font-size: 0px;
+    }
+    .contenedor__cards {
+        display: grid;
+        grid-template-columns: 390px;
+        grid-template-rows: 350px 350px;
+    }
     
-}
-.cardCocina:hover {
-    color: rgb(252, 249, 249);
-    background-color: rgba(255, 255, 255, 0.884);
-    cursor: pointer;
-    transform: scale(1.1);
-    transition-duration: 1.4s;
-}
-.cardCocina img{
-    width: 100px;
-    height: 115px;
-    margin-top: 10px;
-    border-radius: 20px;
-    
-}
-.cardCocina h4{
-    font-size: 10px;
-}
-.cardBaños{
-    width: 35%;
-    height: 140px;
-    background-color: rgba(255, 255, 255, 0.61);
-    border-radius: 10px;
-    color: rgba(255, 255, 255, 0);
-    transition: all 0.1s;
-    
-}
-.cardBaños:hover {
-    color: rgb(252, 249, 249);
-    background-color: rgba(255, 255, 255, 0.884);
-    cursor: pointer;
-    transform: scale(1.1);
-    transition-duration: 1.4s;
-}
-.cardBaños img{
-    width: 100px;
-    height: 115px;
-    margin-top: 10px;
-    border-radius: 20px;
-    
-}
-.cardBaños h4{
-    font-size: 10px;
-}
-.cardSalon{
-    width: 35%;
-    height: 140px;
-    background-color: rgba(255, 255, 255, 0.61);
-    border-radius: 10px;
-    color: rgba(255, 255, 255, 0);
-    transition: all 0.1s;
-    
-}
-.cardSalon:hover {
-    color: rgb(252, 249, 249);
-    background-color: rgba(255, 255, 255, 0.884);
-    cursor: pointer;
-    transform: scale(1.1);
-    transition-duration: 1.4s;
-}
-.cardSalon img{
-    width: 100px;
-    height: 115px;
-    margin-top: 10px;
-    border-radius: 20px;
-    
-}
-.cardSalon h4{
-    font-size: 10px;
-}
-.cardDeco{
-    width: 35%;
-    height: 140px;
-    background-color: rgba(255, 255, 255, 0.61);
-    border-radius: 10px;
-    color: rgba(255, 255, 255, 0);
-    transition: all 0.1s;
-    
-}
-.cardDeco:hover {
-    color: rgb(252, 249, 249);
-    background-color: rgba(255, 255, 255, 0.884);
-    cursor: pointer;
-    transform: scale(1.1);
-    transition-duration: 1.4s;
-}
-.cardDeco img{
-    width: 100px;
-    height: 115px;
-    margin-top: 10px;
-    border-radius: 20px;
-    
-}
-.cardDeco h4{
-    font-size: 10px;
-    
-}
-
+    .cardCocina{
+        width: 300px;
+        height: 300px;
+        background-color: rgba(255, 255, 255, 0.144);
+        border-radius: 10px;
+        color: rgba(255, 255, 255, 0);
+        transition: all 0.1s;
+        margin-left: 50px;
+    }
+    .cardCocina:hover {
+        color: black;
+        background-color: rgba(255, 255, 255, 0.884);
+        cursor: pointer;
+        transform: scale(1.1);
+        transition-duration: 1.4s;
+    }
+    .cardCocina img{
+        width: 250px;
+        margin-top: 25px;
+        border-radius: 20px;
+    }
+    .cardCocina h4{
+        font-size: 15px;
+        padding-top: 20px;
+    }
+    .cardBaños{
+        width: 300px;
+        height: 250px;
+        background-color: rgba(255, 255, 255, 0.144);
+        border-radius: 10px;
+        color: rgba(255, 255, 255, 0);
+        transition: all 0.1s;
+        margin-left: 50px;
+    }
+    .cardBaños:hover {
+        color: black;
+        background-color: rgba(255, 255, 255, 0.884);
+        cursor: pointer;
+        transform: scale(1.1);
+        transition-duration: 1.4s;
+    }
+    .cardBaños img{
+        width: 250px;
+        margin-top: 25px;
+        border-radius: 20px;
+    }
+    .cardBaños h4{
+        font-size: 15px;
+        padding-top: 20px;
+    }
+    .contenedor__cards__abajo {
+        display: grid;
+        grid-template-columns: 390px;
+        grid-template-rows: 350px 350px;
+    }
+    .cardSalon{
+        width: 300px;
+        height: 300px;
+        background-color: rgba(255, 255, 255, 0.144);
+        border-radius: 10px;
+        color: rgba(255, 255, 255, 0);
+        transition: all 0.1s;
+        margin-left: 50px;
+    }
+    .cardSalon:hover {
+        color: black;
+        background-color: rgba(255, 255, 255, 0.884);
+        cursor: pointer;
+        transform: scale(1.1);
+        transition-duration: 1.4s;
+    }
+    .cardSalon img{
+        width: 250px;
+        margin-top: 25px;
+        border-radius: 20px;
+    }
+    .cardSalon h4{
+        font-size: 15px;
+        padding-top: 20px;
+    }
+    .cardDeco{
+        width: 300px;
+        height: 300px;
+        background-color: rgba(255, 255, 255, 0.144);
+        border-radius: 10px;
+        color: rgba(255, 255, 255, 0);
+        transition: all 0.1s;
+        margin-left: 50px;
+    }
+    .cardDeco:hover {
+        color: black;
+        background-color: rgba(255, 255, 255, 0.884);
+        cursor: pointer;
+        transform: scale(1.1);
+        transition-duration: 1.4s;
+    }
+    .cardDeco img{
+        width: 250px;
+        margin-top: 25px;
+        border-radius: 20px;
+    }
+    .cardDeco h4{
+        font-size: 15px;
+        padding-top: 20px;
+    }
+/*OBRAS*/
 .obras{
+    
     width: 100%;
-    height: 1450px;
+    height: 1650px;
     background-image: url("../imagen/ALFRED_ESSA\ \(1\).webp");
-    background-repeat: repeat;
-    background-size: 150vh;
+    background-repeat: no-repeat;
+    background-size: 350vh;
     color: black;
     margin: 0;
 }
 .fon__transparente {
     background-color: rgba(46, 43, 43, 0.842);
-    height: 1450px;
+    height: 1650px;
 }
 .obras h3{
-    font-size: 20px;
+    font-size: 30px;
     margin: 0;
-    padding-left: 50px;
+    text-align: center;
     padding-top: 30px;
     color: rgb(255, 255, 255);
 }
 .obras h5{
     color: rgb(255, 255, 255);
-    padding-left: 70px;
-    padding-top: 5px;
+    text-align: center;
+    padding-top: 15px;
     margin: 0;
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    padding-bottom: 20px;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
 }
-
-/*
-.contenedo__cards{npm
+.contenedo__cards{
     margin-top: 0;
+    display: grid;
+    grid-template-columns: 390px;
+    grid-template-rows: 500px 400px 550px;
 }
-
 .contenedo__cards img{
-    padding-left: 50px;
-    width: 250px;
-    height: 140px;
+    padding-left: 0px;
+    width: 350px;
+    height: 200px;
     border-radius: 20px;
-    padding-top: 10px;
-    
+    margin-bottom: 20px;
 }
-
 .card h4{
-    font-size: 17px;
+    font-size: 22px;
     color: #947f45;
-    padding-left: 50px;
+    text-align: center;
     padding-top: 0px;
     margin: 0;
     
 }
 .card h5{
-    font-size: 14px;
-    padding-top: 5px;
-    margin: 0;
-    padding-left: 50px;
-    
+    font-size: 0px;
 }
 .card p{
     padding-top: 0px;
-    font-size: 17px;
-    padding-left: 20px;
-    color: #ffebcd;
-    
+    font-size: 15px;
+    padding-left: 0px;
+    color: #050505;
+    text-align: center;
 }
+.madero{
+    margin-top: 20px;
+    width: 360px;
+    padding-left: 25px;
+}
+
 /*ACA EMPIEZA LA SECCION DE CONTACTOS*/
 .contacto{
     display: grid;
-    height: 600px;
+    height: 700px;
+    grid-template-columns: 380px;
+    grid-template-rows: 300px 380px;
 }
 .contenedor__contact h3{
-    text-align: center;
     font-size: 25px;
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
 .contenedor__contact iframe{
-    width: 340px;
+    width: 360px;
     height: 200px;
     padding-left: 20px;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
     border-radius: 20px;
 }
 .barra{
     margin-top: 0px;
-    
+    display: grid;
+    grid-template-columns: 380px;
+    grid-template-rows: 50px 50px 50px 50px 50px 50px 50px;
 }
 .form__labe{
     font-size: 20px;
     padding-left: 30px;
-    padding-top: 0px;
+    padding: 0px;
     margin: 0;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 .form__label{
     font-size: 20px;
     padding-left: 30px;
-    padding-top: 0px;
+    padding: 0px;
     margin: 0;
     
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -942,74 +878,108 @@ footer .copy{
 .form__input{
     padding-left: 30px;
     margin-top: 0px;
-    margin-bottom: 20px;
+    margin-bottom: 0px;
     margin-left: 5px;
-    
+    border-radius: 20px;
 }
 .form__inpu{
     padding-left: 0px;
     margin-top: 0px;
     margin-bottom: 0px;
     margin-left: 5px;
+    border-radius: 20px;
 }
 .btn__submit{
-    padding-top: 20px;
+    padding-top: 0px;
     font-size: 20px;
-    margin-left: 20px;
+    margin-left: 0px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 .form__textarea{
-    padding-left: 25px;
-    bottom: 40px;
-    margin-top: 0px;
+    padding-left: 30px;
+    border-radius: 20px;
+    margin: 0px;
+}
+button{
+    margin: 5px 130px;
 }
 /*ACA EMPIEZA LA SECCION DE PASO A PASO*/
 .paso{
     background-image: url(../imagen/85994.webp);
     height: 1600px;
-    display: grid;
     width: 100%;
+    background-position: center;
 }
 .fo__transparente{
     background-color: #0a0a0a85;
     width: 100%;
     height: 1600px;
+    
 }
 .fo__transparente h3{
     color: rgb(255, 255, 255);
     text-align: center;
     letter-spacing: 5px;
-    font-size: 20px;
-
+    font-size: 25px;
+    margin-bottom: 40px;
+    padding-top: 30px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
-.cards{
+.icon {
     display: grid;
+    grid-template-columns: 380px;
+    grid-template-rows: 460px 460px 460px;
 }
-.cards {
-    
-    margin: 25px;
-    text-align: center;
-}
-.cards img{
-    
-    border-radius: 10px;
+.imguno img{
+    padding-left: 70px;
+    border-radius: 50px;
     cursor: pointer;
     transition: all 1s;
 }
-
-.cards img:hover{
-    transform: scale(1.1);
-    transition-duration: 1.5s;
+.imguno img:hover{
+    transform: scale(1.03);
+    transition-duration: 1.7s;
 }
-
-.cards h4{
+.icon h4{
     color: rgb(255, 255, 255);
-    
     font-size: 20px;
-
+    text-align: center;
 }
-.cards h5{
+.icon h5{
     color: rgb(255, 255, 255);
     font-size: 15px;
+    text-align:center;
+}
+
+/*FOOTER*/
+footer{
+    margin: 0;
+    background-color: #201f1e;
+}
+footer .titulo{
+    color: rgb(233, 230, 227);
+    justify-content: center;
+    display: flex;
+    margin: 0 0 40px;
+    font-size: 25px;
+}
+footer .copy{
+    color: #ebe6e6;
+    justify-content: center;
+    display: flex;
+    margin: 0;
+}
+.redes{
+    display: flex;
+    align-items: center;
+    justify-content:center;
+    margin: 0;
+    color: white;
+
+}
+.redes i{
+    font-size: 30px;
+    padding: 0 20px 0 20px;
+    color: white;
 }
 }
