--- a/estilos/estilo.css
+++ b/estilos/estilo.css
@@ -284,7 +284,7 @@ header {
 .obras{
     
     width: 100%;
-    height: 1550px;
+    height: 1750px;
     background-image: url("../imagen/ALFRED_ESSA\ \(1\).webp");
     background-repeat: no-repeat;
     background-size: 350vh;
@@ -293,7 +293,7 @@ header {
 }
 .fon__transparente {
     background-color: rgba(46, 43, 43, 0.842);
-    height: 1550px;
+    height: 1750px;
 }
 .obras h3{
     font-size: 30px;
@@ -311,10 +311,10 @@ header {
 }
 
 .contenedo__cards{
-    margin-top: 0;
+    
     display: grid;
     grid-template-columns: 700px 700px;
-    grid-template-rows: 600px 600px;
+    grid-template-rows: 700px 600px;
 }
 
 .contenedo__cards img{
@@ -324,7 +324,12 @@ header {
     border-radius: 20px;
     
 }
-
+.madero{
+    margin: 30px;
+}
+.card{
+    margin: 30px;
+}
 .card h4{
     font-size: 22px;
     color: #947f45;
